2002-07-04  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-iconv-utils.c (g_mime_iconv_strndup): Fix for
	nul-terminating some multibyte charsets.

2002-06-28  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-gpg-context.c (gpg_ctx_op_step): If we get an EOF from the
	status-fd, then set gpg->complete to TRUE.
	(gpg_ctx_get_argv): Use --charset=UTF-8 and --keyserver-options to
	disable auto-key-retrieve rather than the deprecated
	--no-auto-key-retrieve flag.

2002-06-27  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-gpg-context.c (gpg_ctx_op_step): Loop on our reads while
	errno is EINTR or EAGAIN. Also make sure to completely read stdout
	and stderr by keeping better state.
	(gpg_ctx_parse_status): If we encounted a NODATA error from gpg
	and we have diagnostics output, use that as the exception string.
	(gpg_ctx_op_exited): New function to determine if the gpg process
	has exited.
	(gpg_ctx_op_wait): Reuse any exit status information from
	gpg_ctx_op_exited().
	(gpg_verify): Check that the gpg process has not exited each loop.

2002-06-26  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-multipart-signed.c (g_mime_multipart_signed_sign): Once
	we've created the mime-part stream and armored the From lines and
	such, create a new MIME part based on this stream (since normally
	our QP encoder will not armor From lines) and use it as the
	content part for this multipart/signed part rather than the
	original MIME part.
	(multipart_signed_write_to_stream): This can now be simplified by
	calling our parent class's write_to_stream implementation since
	g_mime_multipart_signed_sign() takes care of all the From
	armoring.

2002-06-26  Jeffrey Stedfast  <fejj@ximian.com>

	* test-pgpmime.c: New test suite for the pgp/mime code.

	* gmime-gpg-context.c (gpg_ctx_parse_status): Handle a NODATA
	status message from gpg.

	* gmime-message.c (g_mime_message_new): Don't set NULL header
	values via the g_mime_object_set_header interface.
